--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,14 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.5.RELEASE")
+    }
+}
+
 apply plugin: 'java'
+apply plugin: 'spring-boot'
 
 version = '1.0'
 
@@ -7,5 +17,8 @@ repositories {
 }
 
 dependencies {
+    compile 'org.springframework.boot:spring-boot-starter-web:1.1.5.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-actuator:1.1.5.RELEASE'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
