--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.5.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.6.RELEASE")
     }
 }
 
@@ -17,8 +17,12 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-web:1.1.5.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-actuator:1.1.5.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-web:1.1.6.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-actuator:1.1.6.RELEASE'
 
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile 'junit:junit:4.11'
+    compile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile 'org.springframework.boot:spring-boot-starter-test:1.1.6.RELEASE'
+    testCompile 'com.google.code.gson:gson:2.3'
+    testCompile 'com.sun.jersey:jersey-client:1.18.1'
 }
