--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-actuator:1.1.6.RELEASE'
 
     testCompile 'junit:junit:4.11'
-    compile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'org.springframework.boot:spring-boot-starter-test:1.1.6.RELEASE'
     testCompile 'com.google.code.gson:gson:2.3'
     testCompile 'com.sun.jersey:jersey-client:1.18.1'
