--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web:1.1.6.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-actuator:1.1.6.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.1.6.RELEASE'
+    compile "org.springframework.boot:spring-boot-starter-thymeleaf:1.1.6.RELEASE"
     compile 'com.h2database:h2:1.4.181'
 
     testCompile 'junit:junit:4.11'
