--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,6 @@ dependencies {
     testCompile 'org.springframework.boot:spring-boot-starter-test:1.1.6.RELEASE'
     testCompile 'org.mockito:mockito-core:1.9.5'
 }
+
+apply plugin: 'eclipse'
+eclipse.defaultOutputDir = file('.eclipse')
