--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-thymeleaf:1.1.6.RELEASE"
     compile 'com.h2database:h2:1.4.181'
 
+    runtime 'org.webjars:bootstrap:3.3.4'
+    runtime 'org.webjars:jquery:2.1.3'
+
     testCompile 'junit:junit:4.11'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'org.springframework.boot:spring-boot-starter-test:1.1.6.RELEASE'
