--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,12 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web:1.1.6.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-actuator:1.1.6.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.1.6.RELEASE'
-    compile "org.springframework.boot:spring-boot-starter-thymeleaf:1.1.6.RELEASE"
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf:1.1.6.RELEASE'
     compile 'com.h2database:h2:1.4.181'
+    compile 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:1.2.1'
 
-    runtime 'org.webjars:bootstrap:3.3.4'
-    runtime 'org.webjars:jquery:2.1.3'
+    compile 'org.webjars:bootstrap:3.3.4'
+    compile 'org.webjars:jquery:2.1.3'
 
     testCompile 'junit:junit:4.11'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
