--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'org.springframework.boot:spring-boot-starter-test:1.2.2.RELEASE'
     testCompile 'org.mockito:mockito-core:1.9.5'
+    testCompile 'org.fluentlenium:fluentlenium-core:0.10.3'
 }
 
 apply plugin: 'eclipse'
