Adds Sonar pluging to Gradle

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'spring-boot'
-
+apply plugin: "sonar-runner"
 version = '1.0'
 
 repositories {
